<resources>
    <string name="app_name">AdvertProject</string>
    <string name="forgot_pass"><u>Forgot your password?</u></string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="reset_pass">Reset password</string>
    <string name="send_verif_email">Send verification email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="skip_login">SKIP</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="advert_description">Description of advertisement in a few lines</string>
    <string name="add_location">Add location</string>
    <string name="add_photo">Add photo</string>
    <string name="publish">Publish</string>
    <string name="profile">Profile</string>
    <string name="welcome">WELCOME!</string>
    <string name="my_adverts">My adverts</string>
    <string name="recent">Recent</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="view_profile">View profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save_changes">Save changes</string>
</resources>
