<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
   >

    <LinearLayout
        android:id="@+id/loginlinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/advertappicon" />

        <EditText
            android:id="@+id/et_fName"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorDarkBlue"
            android:hint="@string/first_name" />
        <EditText
            android:id="@+id/et_lName"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorDarkBlue"
            android:hint="@string/last_name" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorDarkBlue"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/et_phonenumber"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:hint="@string/phone_number" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorDarkBlue"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/et_confirmpassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorDarkBlue"
            android:inputType="textPassword"
            android:hint="@string/confirm_pass" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorJade"
            android:text="@string/register" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>