<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="com.example.asus.advertproject.profile.ViewProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/colorDarkBlue"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"/>

    <ImageView
        android:id="@+id/profileIV"
        android:layout_width="wrap_content"
        android:layout_height="156dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/advertapplogo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="70dp"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="70dp"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="48dp"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="48dp"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_first_name"
        android:textColor="@color/colorPrimaryDark"
        android:text=""
        android:layout_marginTop="260dp"
        android:layout_marginStart="165dp"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_last_name"
        android:textColor="@color/colorPrimaryDark"
        android:text=""
        android:layout_marginTop="300dp"
        android:layout_marginStart="165dp"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_email"
        android:textColor="@color/colorPrimaryDark"
        android:text=""
        android:layout_marginTop="340dp"
        android:layout_marginStart="165dp"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_phone_number"
        android:textColor="@color/colorPrimaryDark"
        android:text=""
        android:layout_marginTop="380dp"
        android:layout_marginStart="165dp"
        android:textSize="16sp"/>

</RelativeLayout>
