<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="com.example.asus.advertproject.profile.EditProfileActivity">

    <LinearLayout
        android:id="@+id/loginlinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/colorDarkBlue"
            android:layout_gravity="center_horizontal"
            android:textSize="35sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/advertapplogo" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:layout_marginTop="62dp"
                android:layout_marginStart="70dp"
                android:textColor="@color/colorDarkBlue"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:layout_marginTop="112dp"
                android:layout_marginStart="70dp"
                android:textColor="@color/colorDarkBlue"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:layout_marginTop="162dp"
                android:layout_marginStart="45dp"
                android:textColor="@color/colorDarkBlue"
                android:textSize="18sp"/>


            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="50dp"
                android:textColor="@color/colorDarkBlue"
                android:textColorHint="@color/colorPrimaryDark"
                android:hint="@string/first_name" />
            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="100dp"
                android:textColor="@color/colorDarkBlue"
                android:textColorHint="@color/colorPrimaryDark"
                android:hint="@string/last_name" />
            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="150dp"
                android:textColor="@color/colorDarkBlue"
                android:textColorHint="@color/colorPrimaryDark"
                android:hint="@string/phone_number" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_save_changes"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlueGrey"
            android:text="@string/save_changes" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
