<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="com.example.asus.advertproject.login.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/loginlinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorDarkBlue"
            android:text="@string/reset_pass"
            android:layout_marginTop="10dp"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="156dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/advertapplogo" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorDarkBlue"
            android:hint="@string/email" />

        <Button
            android:id="@+id/btn_verification"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlueGrey"
            android:text="@string/send_verif_email" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
